--- a/src/app.html
+++ b/src/app.html
@@ -10,9 +10,13 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&family=Racing+Sans+One&display=swap"
     />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover">
+  <body
+    class="selection:bg-primary selection:text-primary-content"
+    data-sveltekit-preload-data="hover"
+  >
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
