--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#d30132" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AlfayedDennita" />
     <meta name="twitter:creator" content="@AlfayedDennita" />
