--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="scroll-smooth" lang="%paraglide.lang%">
   <head>
+    <script src="/scripts/theme.js"></script>
     <!-- Google tag (gtag.js) -->
     <script
       async
@@ -20,7 +21,6 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AlfayedDennita" />
     <meta name="twitter:creator" content="@AlfayedDennita" />
-    <script src="/scripts/theme.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
